[tool.poetry]
name = "epics-docs"
version = "0.1.0"
description = "EPICS documentation located on https://docs.epics-controls.org/"
authors = ["epics-docs contributors"]
readme = "README.md"
packages = [{include = "epics_docs"}]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-hoverxref = "^1.3.0"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-reredirects = "^0.1.3"
readthedocs-sphinx-search = "^0.3.2"
sphinx-tags = "^0.2.1"
sphinx-design = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
