[tool.poetry]
name = "epics-docs"
version = "0.1.0"
description = "EPICS documentation located on https://docs.epics-controls.org/"
authors = ["epics-docs contributors"]
readme = "README.md"
packages = [{include = "epics_docs"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2025.8.25"
sphinx-reredirects = "^1.0.0"
sphinx-tags = "^0.4"
sphinx-design = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
