[project]
name = "epics-docs"
authors = [{name = "The EPICS Community"}]
description = "EPICS documentation located on https://docs.epics-controls.org/"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.11, < 4.0"
dependencies = [
	"sphinx (>=8.2.3,<9.0.0)",
	"myst-parser (>=4.0.1,<5.0.0)",
	"sphinx-rtd-theme (>=3.0.2,<4.0.0)",
	"sphinx-autobuild (>=2025.8.25,<2026.0.0)",
	"sphinx-reredirects (>=1.0.0,<2.0.0)",
	"sphinx-design (>=0.6.1,<0.7.0)",
]

[tool.setuptools]
# For pip / setuptools, don't assume we're producing a Python package
packages = []
